<resources>
    <string name="pref_file">Preferences</string>
    <string name="app_name">Acadia Visitor Study</string>
    <string name="tracking_button_text_start">Start Tracking</string>
    <string name="tracking_button_text_stop">Stop Tracking</string>
    <string name="survey_button_text">Take Survey</string>
    <string name="on_track_start">Starting to track GPS Data...</string>
    <string name="on_track_stop">Stopped tracking.</string>
    <string name="notif_channel_name">Acadia Visitor Study</string>
    <string name="version">Acadia Visitor Study v1.0</string>
    <string name="notif_channel_desc">Shows location updates</string>
    <string name="tv_names">Joseph Hogan and James Plante, 2019</string>
    <string name="wpi">Worcester Polytechnic Institute</string>
    <string name="MainPicture">toBeWpiLogo</string>
    <string name="LicensePicture">LicensePicture</string>
    <string name="Instructions">Instructions</string>
    <string name="survey_title">Survey</string>
    <string name="survey_question_3"><b>Question 1:</b> I use my phone to navigate while in Acadia National Park.</string>
    <string name="survey_question_4"><b>Question 2:</b> I would be willing to disclose demographic information on a similar survey in the future.</string>
    <string name="survey_question_5"><b>Question 3:</b> I would be willing to use this application again.</string>
    <string name="question_3_value">4</string>
    <string name="question_4_value">4</string>
    <string name="question_5_value">4</string>
    <string name="submit_button">Submit</string>
    <string name="submitted_notif_text">Survey Submitted</string>
    <string name="Agree">Agree</string>
    <string name="Disagree">Disagree</string>
    <string name="BackButton">Done</string>
    <string name="license_header">Some components of our application are published with modifications under the following license:</string>
    <string name="license_attribuation"><b>LocationUpdatesService.java, Utils.java from Google Play Location Samples</b>\n\n
        Link: <i>https://github.com/googlesamples/android-play-location\n</i></string>
    <string name="Instruction1">1.	The tracking button</string>
    <string name="Instruction1a">a.	Pressing the tracking button will begin recording data if you are on Mount Desert Island or the Schoodic Peninsula.</string>
    <string name="Instruction1b">b.	When the button is red, pressing the button will stop gathering data points. Additionally, you can disable tracking from the notification when outside of the app.\n</string>
    <string name="Instruction2">2.	The Survey Button</string>
    <string name="Instruction2a">a.	This button will bring you to an optional survey which is designed to be taken at the end of your day in the park.</string>
    <string name="Instruction2b">b.	Answer each question is in disagree-agree format represented as a scale from 1 – 7\n</string>
    <string name="Instruction3">3.	When is the app on?</string>
    <string name="Instruction3a">a.	The app is only recording data points when you are getting notifications containing your GPS data.</string>
    <string name="Instruction3b">b.	When the Tracking button is green the app is not gathering data.</string>
    <string name="Instruction3c">c.	When the phone is outside of Mount Desert Island or the Schoodic Peninsula, the phone will stop gathering data points, but the app will consistently check if you are in range again. That function will have to be disabled manually either by pressing the ‘Stop Tracking’ button in the app or in the notification.</string>
    <string name="Instruction3d">d.	When you are done using the app, feel free to uninstall it. You can reinstall the application any time by following the QR code to the download link.\n\n</string>
</resources>